--- a/base/templates/base/room.html
+++ b/base/templates/base/room.html
@@ -119,7 +119,9 @@
            
           </div>
           <div class="room__message">
-            <form action="#"><input name="comment" placeholder="Write your message here..." /></form>
+            <form action="" method="POST">
+              {% csrf_token %}
+              <input name="comment" placeholder="Write your message here..." /></form>
           </div>
         </div>
         <!-- Room End -->
