--- a/base/templates/base/room_component.html
+++ b/base/templates/base/room_component.html
@@ -1,9 +1,9 @@
 {% for room in rooms %}
 <div class="roomListRoom">
     <div class="roomListRoom__header">
-      <a href="" class="roomListRoom__author">
+      <a href="{% url 'room-profile' room.host.id %}" class="roomListRoom__author">
         <div class="avatar avatar--small active">
-          <img src="https://randomuser.me/api/portraits/men/11.jpg" />
+          <img src="{{room.host.avatar.url}}" />
         </div>
         <span>{{room.host.username}}</span>
       </a>
