--- a/base/templates/base/login_reg.html
+++ b/base/templates/base/login_reg.html
@@ -17,8 +17,8 @@
             <form class="form" action="" method="POST">
               {% csrf_token %}
               <div class="form__group form__group">
-                <label for="room_name">Username</label>
-                <input id="username" name="username" type="text" placeholder="e.g. sudeep" />
+                <label for="room_name">Email</label>
+                <input id="username" name="email" type="text" placeholder="e.g-sudeep@gmail.com" />
               </div>
               <div class="form__group">
                 <label for="password">Password</label>
@@ -67,7 +67,7 @@
           <div class="layout__body">
             <h2 class="auth__tagline">Chatroom</h2>
 
-            <form class="form" action="" method="POST">
+            <form class="form" action="" method="POST" enctype="multipart/form-data">
               {% csrf_token %}
 
               {% for field in form %}
