--- a/base/templates/base/room.html
+++ b/base/templates/base/room.html
@@ -70,9 +70,9 @@
                 <p>Hosted By</p>
                   <a href="{% url 'room-profile' rooms.host.id %}" class="room__author">
                   <div class="avatar avatar--small">  
-                    <img src="https://randomuser.me/api/portraits/men/37.jpg" />
+                    <img src="{{rooms.host.avatar.url}}" />
                   </div>
-                  <span>@{{rooms.host}}</span>
+                  <span>@{{rooms.host.username}}</span>
                 </a>
               </div>
               <div class="room__details">
@@ -89,9 +89,9 @@
                     <div class="thread__author">
                       <a href="{% url 'room-profile' message.user.id %}" class="thread__authorInfo">
                         <div class="avatar avatar--small">
-                          <img src="https://randomuser.me/api/portraits/men/37.jpg" />
+                          <img src="{{message.user.avatar.url}}" />
                         </div>
-                        <span>@{{message.user}}</span>
+                        <span>@{{message.user.username}}</span>
                       </a>
                       <span class="thread__date">{{message.created|timesince}} ago</span>
                     </div>
@@ -133,7 +133,7 @@
             {% for participant in participants %}
             <a href="{% url 'room-profile' participant.id %}"class="participant">
               <div class="avatar avatar--medium">
-                <img src="https://randomuser.me/api/portraits/men/37.jpg" />
+                <img src="{{participant.avatar.url}}" />
               </div>
               <p>
                 {{participant.username}}
