--- a/templates/nav.html
+++ b/templates/nav.html
@@ -27,9 +27,9 @@
         <div class="header__user">
           <a href="{% url 'update-user' %}">
             <div class="avatar avatar--medium active">
-              <img src="https://randomuser.me/api/portraits/men/37.jpg" />
+              <img src="{{request.user.avatar.url}}" />
             </div>
-            <p>{{request.user}} <span>{{request.user}}</span></p>
+            <p>{{request.user.username}} <span>{{request.user.username}}</span></p>
           </a>
           <button class="dropdown-button">
             <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
@@ -86,10 +86,9 @@
 
 
 
-{% if request.user.is_authenticated %}
-<strong>Hello  {{request.user}}</strong><br>
-<a href="{% url 'logout' %}">Logout</a>
-{% else %}
-<a href="{% url 'login' %}">Login</a>
-{% endif %}
+
+<strong>Hello -  {{request.user.username}}</strong><br>
+<a href="{% url 'home' %}">
+ <h3>home</h3>
+</a>
 <hr>
